fix width; footer margin add

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Archivo:500|Open+Sans:300,700" rel="stylesheet">
   <script src="script.js" defer></script>
   <title>Document</title>
 </head>
@@ -16,7 +17,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="brand-title">Ruslan Nizamov</div>
+      <h1 class="brand-title">Ruslan Nizamov</h1>
       <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -47,8 +48,8 @@
 
     </section>
 
-    <section class="about-section">
-      <h3>Introduction</h3>
+    <section class="intro-section">
+      <h2 class="title">Introduction</h2>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's
         standard dummy text ever since the ads, when and unknown the printer took a galley of type and scrambled it to
         make a type specimen book. It has been survived not only five centuries.
@@ -56,55 +57,88 @@
         1960s with the release of Letraset .</p>
     </section>
 
-    <h2 class="title">Projects</h2>
+
     <section class="projects-section">
-      <div class="card">
-        <h3 class="card-title">Card Title</h3>
-        <div class="card-body">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/150" alt="place kitten" />
+      <h2 class="title">Projects</h2>
+      <div class="projects-container">
+
+        <div class="card">
+          <h3 class="card-title">Project Name 1</h3>
+          <div class="card-body">
+            <div class="project-image">
+              <img src="https://via.placeholder.com/150" alt="project description" />
+            </div>
+            <div class="card-body-text">
+              <p>Project description.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card">
-        <h3 class="card-title">Card Title</h3>
-        <div class="card-body">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/150" alt="place kitten" />
+
+
+        <div class="card">
+          <h3 class="card-title">Project Name 2</h3>
+          <div class="card-body">
+            <div class="project-image">
+              <img src="https://via.placeholder.com/150" alt="project description" />
+            </div>
+            <div class="card-body-text">
+              <p>Project description.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card">
-        <h3 class="card-title">Card Title</h3>
-        <div class="card-body">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/150" alt="place kitten" />
+
+
+        <div class="card">
+          <h3 class="card-title">Project Name 3</h3>
+          <div class="card-body">
+            <div class="project-image">
+              <img src="https://via.placeholder.com/150" alt="project description" />
+            </div>
+            <div class="card-body-text">
+              <p>Project description.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card">
-        <h3 class="card-title">Card Title</h3>
-        <div class="card-body">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/150" alt="place kitten" />
+
+
+        <div class="card">
+          <h3 class="card-title">Project Name 4</h3>
+          <div class="card-body">
+            <div class="project-image">
+              <img src="https://via.placeholder.com/150" alt="project description" />
+            </div>
+            <div class="card-body-text">
+              <p>Project description.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card">
-        <h3 class="card-title">Card Title</h3>
-        <div class="card-body">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/150" alt="place kitten" />
+
+
+        <div class="card">
+          <h3 class="card-title">Project Name 5</h3>
+          <div class="card-body">
+            <div class="project-image">
+              <img src="https://via.placeholder.com/150" alt="project description" />
+            </div>
+            <div class="card-body-text">
+              <p>Project description.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card">
-        <h3 class="card-title">Card Title</h3>
-        <div class="card-body">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/150" alt="place kitten" />
+
+        <div class="card">
+          <h3 class="card-title">Project Name 6</h3>
+          <div class="card-body">
+            <div class="project-image">
+              <img src="https://via.placeholder.com/150" alt="project description" />
+            </div>
+            <div class="card-body-text">
+              <p>Project description.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
           </div>
         </div>
+
+
       </div>
     </section>
 
