--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
       </div>
       <div>
         <label>Your Message</label>
-        <textarea name="message" placeholder="I'd like to chat about" required></textarea>
+        <textarea name="message" placeholder="Type your message here..." required></textarea>
       </div>
       <div class="btn-container">
         <button class="button-send">SEND</button>
